# KapoorLabs-VollSeg

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini  update_version.py
.github/workflows/: deploy.yml
docs/: care.md  legacy.md  stardist.md  stardist_lightning_vs_keras.md  unet.md
plugins/napari/: README.md
plugins/napari-curvature/: README.md  pyproject.toml
plugins/napari-curvature/src/kapoorlabs_curvature_napari/: __init__.py  _plot.py  _profile.py  _widget.py  napari.yaml
plugins/napari-curvature/tests/: test_smoke.py
plugins/napari-vollseg/: README.md  pyproject.toml
plugins/napari-vollseg/src/kapoorlabs_vollseg_napari/: __init__.py  _runner.py  napari.yaml
plugins/napari/tests/: test_smoke.py
scripts/: 01_enhance_membrane.py  01_membrane_segmentation_cellpose.py  01_nuclei_segmentation.py  01_segmentation_metrics.py  01_vollcellpose_membrane_segmentation.py  02_train_stardist_pytorch.py  README.md  _upload_models_to_hf.py  clean_checkpoints.py  linkedin_announcement.md  scenarios.py  upload_pytorch_models_to_hf.py
scripts/analysis/: plot_metrics.py  plot_metrics_unet.py
scripts/conf/: scenario_curvature_distribution.yaml  scenario_predict_care.yaml  scenario_predict_combo.yaml  scenario_predict_roi.yaml  scenario_predict_stardist.yaml  scenario_predict_unet.yaml  scenario_segment.yaml
scripts/conf/experiment_data_paths/: curvature_distribution.yaml  predict_combo_jeanzay.yaml  predict_default.yaml  predict_jeanzay.yaml  predict_jeanzay_care.yaml  predict_jeanzay_maskunet.yaml  predict_jeanzay_stardist.yaml  predict_jeanzay_unet.yaml  testdataset.yaml
scripts/conf/model_paths/: jeanzay.yaml
scripts/conf/parameters/: care.yaml  combo.yaml  curvature_distribution.yaml  default.yaml  predict_roi.yaml  roi.yaml  stardist.yaml  unet.yaml
scripts/curvature_physics/: curvature_distribution.py  scenarios.py
scripts/legacy_segmentation_workflow/: 01_vollcellpose_membrane_segmentation.py  scenarios.py
scripts/model_prediction/: compare-roi-stardist-vs-keras.py  compare-stardist-vs-keras.py  compare_roi_stardist_vs_keras.ipynb  compare_segmentations.py  compare_stardist_vs_keras.ipynb  predict-care.py  predict-combo.py  predict-roi.py  predict-stardist.py  predict-unet.py  scenario_compare_roi_stardist_vs_keras.py  scenario_compare_stardist_vs_keras.yaml  scenario_predict_care.py  scenario_predict_roi.py  scenarios.py  sweep_predict_and_analyze.py  sweep_predict_roi_stardist_and_analyze.py  sweep_predict_unet_and_analyze.py  sweep_stardist_analyze.py  sweep_stardist_clean.py  sweep_summary_analyzer.ipynb  sweep_unet_analyze.py  sweep_unet_clean.py  timelapse_fifth_dataset.compare.csv  timelapse_fifth_dataset.compare_roi.csv
scripts/model_prediction/conf/: scenario_compare_roi_stardist_vs_keras.yaml
scripts/model_prediction/stardist_sweeps/: sweep_best_models.txt  sweep_predict_summary.csv  sweep_summary.csv
scripts/model_prediction/unet_sweeps/: sweep_predict_summary.csv
scripts/model_training/: README.md  compare_stardist_vs_keras.ipynb  lightning-care.py  lightning-roi.py  lightning-stardist.py  lightning-unet.py  optimize-stardist-thresholds.py  scenario_compare_stardist_vs_keras.py  scenario_optimize_stardist_thresholds.py  scenario_train_care.py  scenario_train_roi.py  scenario_train_stardist.py  scenario_train_unet.py  slurm_sweep_care_jeanzay.sh  slurm_sweep_stardist_jeanzay.sh  slurm_sweep_unet_jeanzay.sh  slurm_train_care_jeanzay.sh  slurm_train_stardist_gwdg.sh  slurm_train_stardist_jeanzay.sh  slurm_train_stardist_winner_jeanzay.sh  slurm_train_unet_gwdg.sh  slurm_train_unet_jeanzay.sh
scripts/model_training/conf/: scenario_optimize_stardist_thresholds.yaml  scenario_train_stardist.yaml  scenario_train_unet.yaml
scripts/segmentation_workflow/: 01_enhance_membrane.py  01_membrane_segmentation_cellpose.py  01_nuclei_segmentation.py  01_segmentation_metrics.py  _upload_models_to_hf.py
scripts/train_data_generation/: README.md  generate-care-training-data.py  generate-roi-training-data.py  generate-training-data.py  h5_inspect.py  h5_visualizer.ipynb  merge_h5_datasets.py  roi_h5_visualizer.ipynb  scenario_generate.py  scenario_generate_care.py  scenario_generate_roi.py  slurm_generate_gwdg.sh  slurm_generate_jeanzay.sh  stardist_h5_visualizer.ipynb  unet_h5_visualizer.ipynb
scripts/train_data_generation/conf/: scenario_generate.yaml
src/kapoorlabs_vollseg/: __init__.py  _version.py  fusion.py  hub.py  pretrained.py  seedpool.py
src/kapoorlabs_vollseg/_backbones/: __init__.py  _config.py  care.py  care_keras.py  cellpose.py  maskunet.py  maskunet_keras.py  stardist.py  stardist_keras.py  unet.py  unet_keras.py
src/kapoorlabs_vollseg/_lightning/: __init__.py  base_module.py  care_module.py  dataset.py  optimizers.py  schedulers.py  stitch.py  transforms.py  unet_dataset.py
src/kapoorlabs_vollseg/_tests/: __init__.py  test_composition.py
src/kapoorlabs_vollseg/care_lightning/: __init__.py  base_module.py  dataset.py  lightning_trainer.py  module.py  optimizers.py  presets.py  pytorch_callbacks.py  pytorch_datasets.py  pytorch_loggers.py  registry.py  schedulers.py  trainer.py  transforms.py  utils.py
src/kapoorlabs_vollseg/curvature/: __init__.py  api.py  boundary.py  distribution.py  fit_2d.py  fit_3d.py  physics.py  profile.py  render.py  timelapse.py  tracking.py  windows.py
src/kapoorlabs_vollseg/data/: io.py  labels.py  patches.py  sequencer.py  (+1 more)
src/vollseg/: __init__.py  _version.py  fusion.py  hub.py  pretrained.py  seedpool.py
tests/: conftest.py  test_combo_factory_shapes.py  test_data_labels.py  test_distance.py  test_factory.py  test_from_folder_config.py  test_fusion.py  test_hub.py  test_lightning_dataset.py  test_losses.py  test_matching.py  test_nms.py  test_pipelines_base.py  test_rays.py  test_roi_pipeline.py  test_seedpool.py  test_stardist_backbone_faces.py  test_stardist_inference.py  test_stardist_optimizer_cache.py  test_stardist_polyhedron.py  test_stardist_transforms.py  test_timelapse_predict.py  test_unet_stardist_pipeline.py
(+182 files in other folders)
