[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vollseg"
version = "33.0.0"
description = "Hierarchical, composable segmentation for biological image data (clean rewrite of VollSeg)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Varun Kapoor", email = "randomaccessiblekapoor@gmail.com" },
    { name = "Claudia Carabana Garcia" },
    { name = "Mari Tolonen" },
    { name = "Jakub Sedzinski" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tifffile",
    "tqdm",
    # PyTorch first-class backend
    "torch",
    "lightning",
    "careamics",
    # Auto-download of pretrained Xenopus models from HuggingFace.
    "huggingface_hub",
    # H5 storage for StarDist (and future) training data.
    "h5py",
    # Keras legacy backend (StarDist still has no PyTorch port; keras
    # CARE / U-Net classes also remain supported for existing weights).
    "csbdeep",
    "stardist",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg"
Source = "https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg"
Issues = "https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
