[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kapoorlabs-vollseg"
version = "1.0.0"
description = "Hierarchical, composable segmentation for biological image data (clean rewrite of VollSeg)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Varun Kapoor", email = "randomaccessiblekapoor@gmail.com" },
    { name = "Mari Tolonen" },
    { name = "Jakub Sedzinski" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    # Core utilities.
    "numpy",
    "scipy",
    "scikit-image",
    "tifffile",
    "tqdm",
    "h5py",
    "huggingface_hub",
    # PyTorch stack (first-class). All the bare-named singletons /
    # composites / trainers depend on this; `cellpose` is also PyTorch.
    "torch",
    "lightning",
    "careamics",
    "cellpose",
]

[project.optional-dependencies]
# `pip install kapoorlabs-vollseg[pytorch]` — explicit alias of the default.
# Empty marker since the PyTorch stack is already in `dependencies`.
pytorch = []

# `pip install kapoorlabs-vollseg[keras]` — adds the legacy csbdeep / stardist
# backend (which transitively pulls in tensorflow). Required only if you
# want to use the `*Keras` classes or load existing csbdeep `.h5` weights.
keras = ["csbdeep", "stardist"]

# Everything.
all = ["csbdeep", "stardist"]

# Dev / test extras.
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg"
Source = "https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg"
Issues = "https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
