[metadata]
name = kapoorlabs-vollseg
version = attr: vollseg._version.__version__
description = Hierarchical, composable segmentation for biological image data (clean rewrite of VollSeg).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg
author = Varun Kapoor, Claudia Carabana Garcia, Mari Tolonen, Jakub Sedzinski
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg
    User Support = https://github.com/Kapoorlabs-CAPED/KapoorLabs-VollSeg/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
    scikit-image
    tifffile
    tqdm
    torch
    lightning
    careamics
    huggingface_hub
    h5py
    csbdeep
    stardist

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest
    pytest-cov
scripts =
    hydra-core
    natsort

[options.package_data]
* = *.yaml
