[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kapoorlabs-curvature-napari"
version = "0.1.0"
description = "Napari plugin for KapoorLabs curvature timelapse measurement (line profiles, kymographs, intensity correlation)."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [{name = "Varun Kapoor", email = "varun.kapoor@kapoorlabs.org"}]
keywords = ["napari", "curvature", "line-profile", "kymograph", "biological-imaging"]
classifiers = [
  "Framework :: napari",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "kapoorlabs-vollseg>=1.0.0",
  "napari>=0.4.18",
  "magicgui>=0.7",
  "qtpy",
  "PyQt6",
  "matplotlib",
  "tifffile",
  "numpy",
  "scipy",
  "scikit-image",
]

[project.optional-dependencies]
testing = ["pytest", "pytest-qt", "napari[all]"]

[project.entry-points."napari.manifest"]
"kapoorlabs-curvature-napari" = "kapoorlabs_curvature_napari:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
kapoorlabs_curvature_napari = ["napari.yaml", "resources/*"]
